# protoDB

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindGccAtomic.cmake  FindJEMALLOC.cmake
core/include/: AbstractFunctionality.h  AbstractServer.h  Server.h
core/src/: AbstractFunctionality.cc  AbstractServer.cc  Server.cc
functionalities/communicator/include/: Communicator.h
functionalities/communicator/src/: Communicator.cc
functionalities/data_store/include/: AbstractColumn.h  Block.h  BlockManager.h  DataStore.h  IntegerColumn.h  MatrixColumn.h  SetSchema.h
functionalities/data_store/src/: AbstractColumn.cc  Block.cc  BlockManager.cc  DataStore.cc  IntegerColumn.cc  MatrixColumn.cc  SetSchema.cc
functionalities/logger/include/: AbstractLogger.h  StandardOutputLogger.h
functionalities/logger/src/: AbstractLogger.cc  StandardOutputLogger.cc
functionalities/resource_manager/include/: ResourceManager.h
functionalities/resource_manager/src/: ResourceManager.cc
operators/include/: AbstractOperator.h  AggregationOperator.h  ColumnExpression.h  ColumnSpecification.h  JoinOperator.h  SelectionOperator.h
operators/src/: AbstractOperator.cc  AggregationOperator.cc  ColumnExpression.cc  ColumnSpecification.cc  JoinOperator.cc  SelectionOperator.cc
results/: matrix-mult.csv
runtime/include/: Pipeline.h  StraightPipeline.h
runtime/src/: Pipeline.cc  StraightPipeline.cc
script/: install.sh  mpirunner.sh  run-multiplication-benchmark.py
tests/: TestCommunicatorNew.cc  TestCommunicatorNewBackup.cc  TestCommunicatorTraditional.cc  TestDataStore.cc  TestMatrixMultiply.cc
